# high-order-ipc-data

./: .gitignore  README.md  cuved_cube.msh  order_mesh=P4-coarse_m=20.npz  order_mesh=armadillop4_m=10.npz  requirements.txt
densities/: gargoyle-to-gargoyle-coarse.txt
meshes/: ball.msh  bunny.ply  mat40x40.msh  mat40x40.ply  octocat.ply  sphere5K.ply
meshes/armadillo/: armadillo.msh  armadillo_P4-P2-higher-order-edges.txt  armadillo_P4-P4-higher-order-edges.txt  armadillo_P4.msh.opt  order_mesh=armadillo_P4_m=10.npz
meshes/armadillo-standing/: armadillo-coarse.msh  armadillo-hollow-coarse.msh  armadillo-hollow-coarser.msh  armadillo-hollow.msh  armadillo.msh  armadillo1-coarse.msh  armadillo1.msh  diff.json
meshes/beam-bending/: beam-bending-refined.msh  beam-bending.msh
meshes/bunny/: bunny.msh  bunny.ply
meshes/cube/: cube-sub4.msh  cube-sub4.ply  cube-symmetric.msh  cube.ply
meshes/gargoyle/: gargoyle-coarse.msh  gargoyle-coarse.ply  gargoyle.ply
meshes/graspsim/: gripper.msh  gripper.ply  scene.ply  union.json
meshes/mat/: generate_mat.ipynb  mat40x40.ply  mat60x60.msh  mat70x70.msh  mat80x80.msh  mat90x90.msh  mat92x92.msh  mat94x94.msh  mat96x96.msh  mat98x98.msh
meshes/microstructure/: microstructure_P1.msh  microstructure_P1_fine.msh  microstructure_P1_medium.msh  microstructure_P4-P4-higher-order-edges.txt  order_mesh=microstructure_P4_m=10.npz
meshes/octocat/: octocat-coarse.msh  octocat-coarse.ply  octocat.msh  octocat.ply
meshes/screw/: screw-coarse.ply
meshes/sphere/: P1-coarse.ply  P3-coarse.msh  sphere-coarse.msh  sphere-coarse.ply  sphere-fine.ply  sphere3.msh  sphere5K.msh
misc/: Faces.cpp  Faces.hpp
notebooks/: cm-tet.ipynb  displacement_map.ipynb  displacement_map_3D.ipynb  downsample.ipynb  graspsim-to-polyfem.ipynb  high-oder.ipynb  high-order.ipynb  higher_order_edges.ipynb  intermediate-res.ipynb  phi_is_linear.ipynb  triangle.ipynb  upsample_mesh.ipynb  utils.py
notebooks/figures/: bouncing_ball.ipynb  figure.ipynb  p1-coarse.csv  p1-fine.csv  p1.csv  p4.csv  rolling_ball.ipynb
scripts/: ball-bc.json  ball-full.json  ball-mvc.json  ball.json  defaults.json  defaults.v2.json  kinematic-dress.json  test-object-falling.json  test.json
scripts/balance/: armadillo-balance-coarse-optimized.json  armadillo-balance-coarse.json  armadillo-balance-fine.json  rhos.txt
scripts/baseline/: P2_coarse_fem+fine_collision.json  coarse_fem+coarse_collision.json  coarse_fem+fine_collision.json  fine_fem+coarse_collision.json  fine_fem+fine_collision.json  fine_fem+fine_fem.json  full-full.json  full-reduced.json  reduced-full.json  reduced-reduced.json
scripts/bounce/: bounce-P1-baseline-coarse.json  bounce-P1-baseline-fine.json  bounce-P1.json  bounce-P2.json  bounce-P3.json  bounce-P4.json
scripts/friction/: armadillo-roller-P2-wCM.json  armadillo-roller-P2.json  armadillo-roller-baseline.json  armadillo-roller.json
scripts/graspsim/: grasp-cube.json  grasp-gargoyle-baseline.json  grasp-gargoyle.json
scripts/higher-order/: circle-rollers.json  coarse-golf-ball-3D-P1.json  coarse-golf-ball-3D-P2.json  coarse-golf-ball-3D-P3.json  gargoyle-P2.json  golf-ball-2D-P2.json  golf-ball-2D-P3.json  golf-ball-3D-P2.json  sphere-P2.json  squish-beam-P1-ref.json  squish-beam-P1.json  squish-beam-P2.json  squish-beam-P3.json  test.json  (+4 more)
src/: upsample_mesh.ipynb
tools/: MeanValue.py  coarse_mesh.sh  curved_cube.py  find_shuffle.py  generate_higher_order.py  generate_weights.py  mesh_heirarchy.sh  optimize_density.py  proxies.py  scene.py  worker.py
tools/weights/L2_projection/: CMakeLists.txt  L2_projection.cpp  L2_projection.hpp  bindings.cpp
tools/weights/L2_projection/cmake/: libigl.cmake  pybind11.cmake  warnings.cmake
tools/weights/L2_projection/quadrature/: points.csv  weights.csv
weights/: cube-symmetric-to-ball.hdf5  cube-symmetric-to-cube-symmetric.hdf5
(+136 files in other folders)
